feat: favorite businesses save on localStorage functionality

--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -28,7 +28,7 @@ main {
     font-size: 1.2rem;
     margin: 2rem 0;
   }
-  .services-list {
+  .index-business-list-holder .business-list {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 1rem;
