--- a/src/components/header/components/Drawer/Drawer.scss
+++ b/src/components/header/components/Drawer/Drawer.scss
@@ -33,6 +33,21 @@
       color: white;
     }
   }
+  .logged-in-block {
+    justify-content: center;
+
+    .email {
+      color: #FFF;
+      background-color: transparent;
+    }
+    svg {
+      color: #FFF;
+
+      &:hover {
+        color: #FFF;
+      }
+    }
+  }
   &.open {
     width: 250px;
 
