--- a/src/components/business/BusinessCard/BusinessCard.module.scss
+++ b/src/components/business/BusinessCard/BusinessCard.module.scss
@@ -1,4 +1,4 @@
-.service-card {
+.serviceCard {
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   border-radius: 1rem;
   height: 450px;
@@ -17,7 +17,7 @@
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
   }
-  .service-info {
+  .serviceInfo {
     padding: 1rem;
     height: 50%;
     width: 100%;
@@ -51,14 +51,14 @@
       margin: 1rem 0rem;
       color: #a8a8a8;
     }
-    .buttons-holder {
+    .buttonsHolder {
       width: 100%;
       display: flex;
       flex-flow: row nowrap;
       justify-content: space-between;
       align-items: center;
 
-      .toggle-favorite {
+      .toggleFavorite {
         cursor: pointer;
         
         > *{
