--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -4,7 +4,7 @@
     justify-content: space-between;
     padding: 2rem 4rem;
 
-    .left-side {
+    .leftSide {
       display: flex;
       align-items: center;
       gap: 2rem;
@@ -27,7 +27,7 @@
         }
       }
     }
-    .logged-in-block {
+    .loggedInBlock {
       display: flex;
       flex-flow: row nowrap;
       align-items: center;
@@ -48,22 +48,22 @@
         }
       }
     }
-    @media (max-width: 1024px) {
+    @include for-large {
       padding: 1rem 2rem;
     }
-    @media (max-width: 768px) {
+    @include for-medium {
       padding: 1rem;
 
-      .left-side {
+      .leftSide {
         nav {
           display: none;
         }
       }
-      .login, > .logged-in-block {
+      .login, > .loggedInBlock {
         display: none;
       }
     }
-    @media (max-width: 450px) {
+    @include for-small {
       .logo img {
         max-width: 120px;
       }
