--- a/src/components/header/components/Drawer/Drawer.module.scss
+++ b/src/components/header/components/Drawer/Drawer.module.scss
@@ -12,7 +12,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #8056eb; 
+  background-color: $primary; 
   overflow-x: hidden; 
   transition: width 0.3s ease-in-out;
   padding-top: 60px;
@@ -34,13 +34,20 @@
     }
   }
   .logged-in-block {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
     justify-content: center;
+    gap: 8px;
 
     .email {
+      padding: 0;
       color: #FFF;
       background-color: transparent;
     }
     svg {
+      font-size: 30px;
+      cursor: pointer;
       color: #FFF;
 
       &:hover {
